--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ sudo: required
 
 addons:
     sonarcloud:
-        organization: "0f4e4ab6d3b29050af53d37e1497e1a12d840427"
+        organization: "aAy9Bgfwy2MeMNDyaVEGVE"
         token:
-            secure: "aAy9Bgfwy2MeMNDyaVEGVE"
+            secure: "0f4e4ab6d3b29050af53d37e1497e1a12d840427"
 script:
     - build-wrapper-linux-x86-64 --out-dir bw-output make clean all
-    - sonar-scanner
+    - sonar-scanner 
 cache:
     directories:
         - '$HOME/.sonar/cache'
